# biomed

./: .gitignore  CMakeLists.txt  README.md  srg.cpp  srg.cxx
SegGUI/: SeedPicker.java
SegGUI/bin2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ReadDICOMSeries.sln  ReadDICOMSeries.vcxproj  ReadDICOMSeries.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
SegGUI/bin2/Debug/: ReadDICOMSeries.ilk
SegGUI/src/: CMakeLists.txt  PickPixel.cxx
SegGUI/src2/: CMakeLists.txt  ReadDICOMSeries.cxx
SegGUI/src3/: CMakeLists.txt  SeededRegionGrower.cxx  SeededRegionGrower.h
assets/: ABD_LYMPH_001.labels  ABD_LYMPH_001.seeds  ADB_LYMPH_001-2.seeds  lungseg.seeds
assets/DICOM-series/: imageinfo.txt
assets/DICOM-series/ABD_LYMPH_001/: 000000.dcm  000001.dcm  000004.dcm  000005.dcm  000006.dcm  000007.dcm  000008.dcm  000009.dcm  000011.dcm  000013.dcm  000014.dcm  000015.dcm  000017.dcm  000020.dcm  000021.dcm  000024.dcm  000026.dcm  000028.dcm  000031.dcm  000033.dcm  000035.dcm  000036.dcm  000038.dcm  000041.dcm  000042.dcm  000044.dcm  000046.dcm  000047.dcm  000048.dcm  000049.dcm  000050.dcm  000051.dcm  000052.dcm  000053.dcm  (+276 more)
assets/EnoraseData/: left_lung_mesh_r4.json  liver_mesh.json
assets/SkullCrackerData/: patients.txt
biomed/DICOM-series/: scale.py
biomed/SkullCrackerData/: patient0.json
fltk/src/: CMakeLists.txt  hello.cxx
fltk/src/__MACOSX/FL/: ._fl_show_input.H
include/Segmentation/: DICOMImage.h  Region.h  SeededRegionGrower.h
src/AndroidViewer/: AndroidViewer.pde
src/Enorase/: Enorase.pde  README.txt  View.pde  tools.pde
src/MeshConstruction/: CropByMask.cxx  MeshConstruction.cxx  MorphOpen.cxx
src/Quantification/: Quantify.cxx
src/Registration/: Threshhold.cxx  Threshold.h
src/Segmentation/: DICOMImage.h  RatedVox.cxx  RatedVox.h  Region.cxx  Region.h  SRGDriver.cxx  SeededRegionGrower.cxx  SeededRegionGrower.h
src/SkullCracker/: AndroidManifest.xml  README.txt  SkullCracker.pde  View.pde  tools.pde
src/temp/: temp.pde
vtk1/src/: CMakeLists.txt  Sphere.cxx
(+19518 files in other folders)
