PROJECT(hello)
FIND_PACKAGE (ITK)
IF (ITK_FOUND)
INCLUDE( ${USE_ITK_FILE} )
ENDIF( ITK_FOUND)
FIND_PACKAGE ( FLTK)
IF ( FLTK_FOUND)
INCLUDE_DIRECTORIES( ${FLTK_INCLUDE_DIR} )
ENDIF( FLTK_FOUND)
ADD_EXECUTABLE( hello hello.cxx)
IF ( FLTK_FOUND)
FLTK_WRAP_UI( myProject myProjectGUI.fl)
ENDIF ( FLTK_FOUND)
TARGET_LINK_LIBRARIES( myProject ITKIO ITKBasicFilters ITKNumerics ITKCommon
${FLTK_LIBRARIES})